--- a/index.html
+++ b/index.html
@@ -5,8 +5,43 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+    <header>
+      <nav>
+         <a href="/">
+           <img src="" width="138" height="70"alt=logo Cyti of Sedona> 
+         </a>
+        <ul>
+          <li><a href="">Информация</a></li>
+          <li><a href="">Фото и видео</a></li>
+          <li><a href="">Карта штата</a></li>
+          <li><a href="">Гостиницы</a></li>
+        </ul>
+      </nav>
+    </header>  
+    <main>
+      <section>
+        <h3>Welcome</h3>
+        <div>to the gorgeous</div>
+        <h1>SEDONA</h1>
+        <p>"Because the Grand<br/>
+          Canyon sucks"</p>
+      </section>
+      <section>
+        <h2>Седона — небольшой городок в Аризоне, заслуживающий большего</h2>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      </section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section>
+        <h4>Заинтересовались?</h4>
+        <p>  Укажите предполагаемые даты поездки,<br/> 
+           и мы покажем вам лучшие предложения гостиниц в седоне  </p>
+          <a href="#">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
+      </section>
+    </main>
+    <!--<p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>-->
 
   </body>
 </html>
