--- a/index.html
+++ b/index.html
@@ -36,10 +36,34 @@
       <section></section>
       <section>
         <h4>Заинтересовались?</h4>
-        <p>  Укажите предполагаемые даты поездки,<br/> 
-           и мы покажем вам лучшие предложения гостиниц в седоне  </p>
+        <p>Укажите предполагаемые даты поездки,<br/> 
+          и мы покажем вам лучшие предложения гостиниц в седоне</p>
           <a href="#">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
       </section>
+      <section></section>
+      <footer>
+        <section>
+          <p>#visitSEDONA<br/>
+          Телефон: ТЕЛ: +7(495) 666-01-66</p>
+        </section>
+        <section>
+          <ul>
+            <li>
+              <a href="#">Twitter</a>
+            </li>
+            <li>
+              <a href="#">Facebook</a>
+            </li>
+            <li>
+              <a href="#">YouTube</a>
+            </li>
+          </ul>
+        </section>
+        <p>
+          Разработано:
+          <a href="https://htmlacademy.ru">HTML Academy</a>
+        </p>
+      </footer>
     </main>
     <!--<p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>-->
 
