--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </ul>
         </section>
         <p>
-          Разработано:
+          WEBSITE by
           <a href="https://htmlacademy.ru">HTML Academy</a>
         </p>
       </footer>
