--- a/Hotels.html
+++ b/Hotels.html
@@ -20,9 +20,9 @@
     </header>  
     <main>
       <section></section>
-      <article>
-
-      </article>
+      <article></article>
+      <article></article>
+      <article></article>
       <footer>
         <section>
           <p>#visitSEDONA<br/>
