--- a/index.html
+++ b/index.html
@@ -30,10 +30,58 @@
         <h2>Седона — небольшой городок в Аризоне, заслуживающий большего</h2>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
       </section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section>
+        <h3>Настоящий городок</h3>
+        <div>№1</div>
+        <p>Седона - не аттракцион для туристов,<br/>
+          там течёт своя жизнь</p>
+        <img src="#" width="800" height="256"alt=foto Cyti of Sedona>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h3>Жилье</h3>
+            <p>Жильё Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li>
+            <h3>Еда</h3>
+            <p>Еда Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li>
+            <h3>Сувениры</h3>
+            <p>Сувениры Не только китайского, но и местного производства!</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <img src="#" width="800" height="256"alt=foto Devils Bridge>
+        <h3>Там есть мост дьявола</h3>
+        <div>№2</div>
+        <p>Да, по нему можно пройти! Если конечно<br/>
+          вы осмелитесь</p>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h4>Небольшая<br>
+            площадь</h4>
+            <div>№3</div>
+            <p>все достопримечательности находятся очень близко</p>
+          </li>
+          <li>
+            <h4>Красивая<br>
+              дорога</h4>
+            <div>№4</div>
+            <p>ехать в седону из лас-вегаса совсем не скучно!</p>
+          </li>
+          <li>
+            <h4>Мало<br>
+              туристов</h4>
+            <div>№5</div>
+            <p>большинство едет в гранд каньон и толпится там</p>
+          </li>
+        </ul>
+      </section>
       <section>
         <h4>Заинтересовались?</h4>
         <p>Укажите предполагаемые даты поездки,<br/> 
@@ -65,7 +113,5 @@
         </p>
       </footer>
     </main>
-    <!--<p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>-->
-
-  </body>
+      </body>
 </html>
