--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
       <nav>
          <a href="/">
-           <img src="" width="138" height="70"alt=logo Cyti of Sedona> 
+           <img src="/img/icons/logo.svg" width="138" height="70"alt="Cyti of Sedona"> 
          </a>
         <ul>
           <li><a href="">Информация</a></li>
@@ -25,6 +25,7 @@
         <h1>SEDONA</h1>
         <p>"Because the Grand<br/>
           Canyon sucks"</p>
+        <img src="/img/welcome.svg" width="457" height="351" alt="welcome to the gorgeus SEDONA">
       </section>
       <section>
         <h2>Седона — небольшой городок в Аризоне, заслуживающий большего</h2>
@@ -35,7 +36,7 @@
         <div>№1</div>
         <p>Седона - не аттракцион для туристов,<br/>
           там течёт своя жизнь</p>
-        <img src="#" width="800" height="256"alt=foto Cyti of Sedona>
+        <img src="/img/sity.jpg" width="800" height="256"alt="foto Cyti of Sedona">
       </section>
       <section>
         <ul>
@@ -54,7 +55,7 @@
         </ul>
       </section>
       <section>
-        <img src="#" width="800" height="256"alt=foto Devils Bridge>
+        <img src="/img/canyon1.jpg" width="800" height="256"alt="foto Devils Bridge">
         <h3>Там есть мост дьявола</h3>
         <div>№2</div>
         <p>Да, по нему можно пройти! Если конечно<br/>
