--- a/Hotels.html
+++ b/Hotels.html
@@ -8,7 +8,7 @@
     <header>
       <nav>
          <a href="/">
-           <img src="" width="138" height="70"alt=logo Cyti of Sedona> 
+          <img src="/img/icons/logo.svg" width="138" height="70"alt="Cyti of Sedona">
          </a>
         <ul>
           <li><a href="">Информация</a></li>
@@ -20,9 +20,15 @@
     </header>  
     <main>
       <section></section>
-      <article></article>
-      <article></article>
-      <article></article>
+      <article>
+        <img src="/img/amara resort.jpg" width="135" height="90"alt="amara resort">
+      </article>
+      <article>
+        <img src="/img/desert quailinn.jpg" width="135" height="90"alt="desert quailinn">
+      </article>
+      <article>
+        <img src="/img/villas at poco diablo.jpg" width="135" height="90"alt="villas at poco diablo">
+      </article>
       <footer>
         <section>
           <p>#visitSEDONA<br/>
