--- a/Hotels.html
+++ b/Hotels.html
@@ -8,50 +8,89 @@
     <header>
       <nav>
          <a href="/">
-          <img src="/img/icons/logo.svg" width="138" height="70"alt="Cyti of Sedona">
+          <img src="img/icons/logo.svg" width="138" height="70"alt="Cyti of Sedona">
          </a>
         <ul>
-          <li><a href="">Информация</a></li>
-          <li><a href="">Фото и видео</a></li>
-          <li><a href="">Карта штата</a></li>
-          <li><a href="">Гостиницы</a></li>
+          <li><a href="#">Информация</a></li>
+          <li><a href="#">Фото и видео</a></li>
+          <li><a href="#">Карта штата</a></li>
+          <li><a href="Hotels.html">Гостиницы</a></li>
         </ul>
       </nav>
     </header>  
     <main>
       <section></section>
       <article>
-        <img src="/img/amara resort.jpg" width="135" height="90"alt="amara resort">
+        <img src="img/amara resort.jpg" width="135" height="90"alt="amara resort">
+        <h3>amara resort & spa</h3>
+        <div class="hotel-type">
+          <p>Гостиница</p>
+          <a href="#">Подробнее</a>
+        </div>  
+        <div class="hotel-price">
+          <p>от 4000р.</p>
+          <a href="#">Забронировать</a>
+        </div>
+        <div class="hotel-rating">
+          <div class="star"></div>
+          <p>рейтинг:8,5</p> 
+        </div>
       </article>
       <article>
-        <img src="/img/desert quailinn.jpg" width="135" height="90"alt="desert quailinn">
+        <img src="img/desert quailinn.jpg" width="135" height="90"alt="desert quailinn">
+        <h3>desert quailinn</h3>
+        <div class="hotel-type">
+          <p>Мотель</p>
+          <a href="#">Подробнее</a>
+        </div>  
+        <div class="hotel-price">
+          <p>от 3000р.</p>
+          <a href="#">Забронировать</a>
+        </div>
+        <div class="hotel-rating">
+          <div class="star"></div>
+          <p>рейтинг:8,9</p> 
+        </div>
       </article>
       <article>
-        <img src="/img/villas at poco diablo.jpg" width="135" height="90"alt="villas at poco diablo">
+        <img src="img/villas at poco diablo.jpg" width="135" height="90"alt="villas at poco diablo">
+        <h3>villas at poco diablo</h3>
+        <div class="hotel-type">
+          <p>Апартаменты</p>
+          <a href="#">Подробнее</a>
+        </div>  
+        <div class="hotel-price">
+          <p>от 2000р.</p>
+          <a href="#">Забронировать</a>
+        </div>
+        <div class="hotel-rating">
+          <div class="star"></div>
+          <p>рейтинг:9,2</p> 
+        </div>
       </article>
-      <footer>
-        <section>
-          <p>#visitSEDONA<br/>
-          Телефон: ТЕЛ: +7(495) 666-01-66</p>
-        </section>
-        <section>
-          <ul>
-            <li>
-              <a href="#">Twitter</a>
-            </li>
-            <li>
-              <a href="#">Facebook</a>
-            </li>
-            <li>
-              <a href="#">YouTube</a>
-            </li>
-          </ul>
-        </section>
-        <p>
-          WEBSITE by
-          <a href="https://htmlacademy.ru">HTML Academy</a>
-        </p>
-      </footer>
     </main>
+    <footer>
+      <section>
+        <p><a href="index.html">#visitSEDONA</a><br/>
+        Телефон: ТЕЛ: +7(495) 666-01-66</p>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <a class="twitter" href="#">Twitter</a>
+          </li>
+          <li>
+            <a class="facebook" href="#">Facebook</a>
+          </li>
+          <li>
+            <a class="youtube" href="#">YouTube</a>
+          </li>
+        </ul>
+      </section>
+      <p>
+        WEBSITE by
+        <a href="https://htmlacademy.ru">HTML Academy</a>
+      </p>
+    </footer>
   </body>
 </html>
